ctm-sf-homeloan-app/main/default/objects/User/fields/FlexiId__c.field-meta.xml
<CustomField>
    <fullName>FlexiId__c</fullName>
    <label>Flexi Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>