ctm-sf-homeloan-app/main/default/objects/User/fields/ProfileDescription__c.field-meta.xml
<CustomField>
    <fullName>ProfileDescription__c</fullName>
    <label>Profile Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>