ctm-sf-homeloan-app/main/default/objects/User/fields/ProfilePictureURL__c.field-meta.xml
<CustomField>
    <fullName>ProfilePictureURL__c</fullName>
    <label>Profile Picture URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>